--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.11",
-        "axios": "^1.7.4",
+        "axios": "^1.12.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0",
+        "lodash": "^4.17.21",
         "vite": "^7.0.4"
     },
     "optionalDependencies": {
@@ -18,9 +19,12 @@
         "lightningcss-linux-x64-gnu": "^1.29.1"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/postcss": "^4.1.13",
-        "autoprefixer": "^10.4.21",
-        "postcss": "^8.5.6",
-        "tailwindcss": "^4.1.13"
+        "@tailwindcss/typography": "^0.5.19",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.1.0"
     }
 }
