--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "@tailwindcss/vite": "^4.1.11",
         "axios": "^1.12.2",
+        "chart.js": "^4.5.1",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0",
         "lodash": "^4.17.21",
